fix: update checkout button id

--- a/two-files-snippet/index.html
+++ b/two-files-snippet/index.html
@@ -7,7 +7,7 @@
         <title>Flash Checkout</title>
     </head>
     <body>
-        <div id="pay-button"></div>
+        <div id="paymob-checkout"></div>
         <script src="https://nextstagingenv.s3.amazonaws.com/js/v1/paymob.js"></script>
         <script src="./app.js" type="module"></script>
     </body>
