--- a/onefile-snippet/index.html
+++ b/onefile-snippet/index.html
@@ -7,14 +7,14 @@
         <title>Flash Checkout</title>
     </head>
     <body>
-        <div id="pay-button"></div>
+        <div id="paymob-checkout"></div>
         <script src="https://nextstagingenv.s3.amazonaws.com/js/v1/paymob.js"></script>
 
         <script>
             fetch("https://next-stg.paymobsolutions.com/marketplace/secret/ibiza/").then(function (response) {
                     return response.json();
                 }).then(function (json) {
-                    Paymob("pkt_ocyiPARECljo1duevlMSKpn3beCz9z5h").checkoutButton(json.client_secret).mount("#pay-button");
+                    Paymob("pkt_ocyiPARECljo1duevlMSKpn3beCz9z5h").checkoutButton(json.client_secret).mount("#paymob-checkout");
                 }).catch(function (err) {
                     console.error(err);
                 });
