--- a/two-files-snippet-placholdered/index.html
+++ b/two-files-snippet-placholdered/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
     <body>
         <!-- Required div to display paymob checkout button inside, with any id to be passed in mount() method. ! -->
         <div id="paymob-checkout"></div>
         <!-- Loading paymob.js SDK -->
-        <script src="https://flashjs.paymob.com/v1/paymob.js"></script>        
+        <script src="https://flashjs.paymob.com/v1/paymob.js"></script>
         <script src="./app.js" type="module"></script>
     </body>
 </html>
